Compiler Bouw/compiler/test/basic/stephen/fail/boolean_operator_abuse.cvc
// Comparisons don't work on booleans, except for ==.

#include "civic.h"

export int main() {
    if (4 && 7) {}
    return 0;
}
